--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -306,9 +306,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/shorts/OdH-SlGlsdM" target="_blank">
-                    <img src="https://i.ytimg.com/vi/OdH-SlGlsdM/mqdefault.jpg" alt="Are You a Lover or a Fixer? | Sadhgury">
+                    <img src="https://i.ytimg.com/vi/OdH-SlGlsdM/mqdefault.jpg" alt="Are You a Lover or a Fixer? | Sadhguru">
                     <div class="video-info">
-                        <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
+                        <h3>Are You a Lover or a Fixer? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">22 hours ago</div>
                     </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>AI Inspired Algo Trading Filter - Must Watch!</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5831,7 +5831,7 @@
                         <div class="video-info">
                             <h3>AI Inspired Algo Trading Filter - Must Watch!</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,9 +7938,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/OdH-SlGlsdM" target="_blank">
-                        <img src="https://i.ytimg.com/vi/OdH-SlGlsdM/mqdefault.jpg" alt="Are You a Lover or a Fixer? | Sadhgury">
+                        <img src="https://i.ytimg.com/vi/OdH-SlGlsdM/mqdefault.jpg" alt="Are You a Lover or a Fixer? | Sadhguru">
                         <div class="video-info">
-                            <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
+                            <h3>Are You a Lover or a Fixer? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">22 hours ago</div>
                         </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
