--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Why We Ignore the Rest of the Universe</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">44 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Early Sexual Intimacy | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>How Your Posture Affects You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -383,9 +383,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=MmN-QIXNBNU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/MmN-QIXNBNU/mqdefault.jpg" alt="Nature is TERRIFYING #6">
+                    <img src="https://i.ytimg.com/vi/MmN-QIXNBNU/mqdefault.jpg" alt="Why you should FEAR Nature">
                     <div class="video-info">
-                        <h3>Nature is TERRIFYING #6</h3>
+                        <h3>Why you should FEAR Nature</h3>
                         <div class="channel">Arthur Frederick</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -684,7 +684,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5864,7 +5864,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Why We Ignore the Rest of the Universe</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">44 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Early Sexual Intimacy | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>How Your Posture Affects You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10294,9 +10294,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=MmN-QIXNBNU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/MmN-QIXNBNU/mqdefault.jpg" alt="Nature is TERRIFYING #6">
+                        <img src="https://i.ytimg.com/vi/MmN-QIXNBNU/mqdefault.jpg" alt="Why you should FEAR Nature">
                         <div class="video-info">
-                            <h3>Nature is TERRIFYING #6</h3>
+                            <h3>Why you should FEAR Nature</h3>
                             <div class="channel">Arthur Frederick</div>
                             <div class="date">Yesterday</div>
                         </div>
