--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack B2B Set 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -1905,7 +1905,7 @@
                     <div class="video-info">
                         <h3>Why the UK government is going broke</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -6205,7 +6205,7 @@
                         <div class="video-info">
                             <h3>Why the UK government is going broke</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack B2B Set 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
